homegrown template evaluator for email

--- a/tests/mail/templates/basic/html.ejs
+++ b/tests/mail/templates/basic/html.ejs
@@ -1,6 +1,18 @@
 <html>
-	<body>
-		<p><%= hello %></p>
-		<p class="red">Your name is <%= name %></p>
-	</body>
+<head>
+<style>
+body {
+font-size: 16px;
+font-family: Consolas;
+}
+
+.red {
+color: red;
+}
+</style>
+</head>
+<body>
+<p><%= hello %></p>
+<p class="red">Your name is <%= name %></p>
+</body>
 </html>
